--- a/static-server/templates/index.html
+++ b/static-server/templates/index.html
@@ -6,5 +6,6 @@
 <body>
   Hello video!!!
   <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
